# on-prem-llms

./: .gitignore  LICENSE  README.md  bill_sum_data.ipynb  chat.py  gsc_queries.ipynb  gsc_queries_qdrant.ipynb  init.ipynb  init.py  knowledge.json  main.ipynb  meggle-food-ingredients.ipynb  ollama_chat.py  output.csv  pyproject.toml  pyvenv.cfg  qdrant.ipynb  rag_agent.py  requirements.txt  setup.py  sql_agent.py  test.ipynb
cli/: deletecollection.py  init.py  setup_documents_db.py  setup_products_db.py  start.py
data/: documents.db  products.db
input/: 20251113-mfi-products.csv  20251115-mfi-products.csv  20251117-mfi-products.csv  20251119-mfi-products.csv  20251120-mfi-products.csv  20260102-MFI-Products-anonymized.xlsx  Suchanfragen.csv  meggle-food-ingredients.csv  mfi_products_schema.csv
modules/: archiver.py  embedding.py  filehandler.py  generator.py  input.py  path.py  qdrant.py  sqlite.py  urldealer.py  userinput.py  vectorizer.py
notebooks/: mfiproducts.ipynb  rag_agent.ipynb  rag_agent.py  sql_agent.ipynb  sql_agent_chinook.ipynb
output/: document_chunks.csv  product_data.csv  product_data.json  product_data.xlsx  ~$product_data.xlsx
qdrant_storage/: raft_state.json
src/my_package/: filemanager.py  storage.py  usecases.py
src/mypackage/: agents.py  archiver.py  chunking.py  datapreparation.py  dbmanager.py  docroot.py  embedder.py  embedding.py  filemanager.py  finder.py  generator.py  knowledger.py  models.py  ospath.py  preparator.py  retriever.py  splitter.py  storage.py  usecases.py  userinput.py
(+9 files in other folders)
