[build-system]
requires = ["setuptools>=69", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1"
description = "Utilities for running LLMs on-prem (package scaffold)"
authors = [
    { name = "Andreas Rieger", email = "dev@rieger.digital" }
]
requires-python = ">=3.10"
keywords = ["llm", "on-prem", "qdrant", "langchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# NOTE: Dependencies are intentionally not pulled from requirements.txt to avoid editable/self refs.
# Add your runtime deps here (unpinned) once curated, e.g.:
# dependencies = [
#   "qdrant-client>=1.6",
#   "langchain-core>=0.2",
# ]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mypackage*"]
